chore: Change a directory structure.

--- a/engine/meson.build
+++ b/engine/meson.build
@@ -4,5 +4,5 @@ subdir('framework')
 subdir('platform')
 
 engine_inc = include_directories('include')
-engine_lib = library('zintl', engine_sources, include_directories : engine_inc)
+engine_lib = library('zintl', engine_sources, include_directories : engine_inc, dependencies : [glheaders_dep])
 engine_dep = declare_dependency(link_with : engine_lib, include_directories : engine_inc)
