--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,7 @@
-project('zintl', 'cpp', default_options : ['cpp_std=c++17'])
+project('zintl', 'cpp', default_options : ['cpp_std=c++17'], subproject_dir : 'thirdparty')
+
+glheaders_proj = subproject('openglheaders')
+glheaders_dep = glheaders_proj.get_variable('gl_dep')
 
 subdir('engine')
 subdir('test')
