--- a/test/meson.build
+++ b/test/meson.build
@@ -1,2 +1,2 @@
-test_init = executable('init', 'init.cpp', dependencies : engine_dep)
+test_init = executable('init', 'init.cpp', dependencies : engine_dep, gui_app : true)
 test('init', test_init)
