feat: Add 2d context

--- a/engine/meson.build
+++ b/engine/meson.build
@@ -1,6 +1,7 @@
 engine_sources = []
 
 subdir('framework')
+subdir('graphics')
 subdir('platform')
 
 dwm_dep = declare_dependency(link_args : ['dwmapi.lib'])
